--- a/style.css
+++ b/style.css
@@ -55,22 +55,64 @@ h1, h2, h3, h4, h5, h6 {
 
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  display: grid;
-  place-items: center;
+  display: flex;
+  justify-content: center;
   height: 100vh;
 }
 
 .container {
   height: 90vh;
   width: 90vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.header {
+  margin-top: 50px;
+}
+
+.game-info {
+  display: grid;
+  grid-template: 1fr / repeat(3, 1fr);
+  margin-bottom: 25px;
+}
+
+.player-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.player-wrapper input {
+  text-align: center;
+}
+
+.current-player {
+  color: red;
+}
+
+.game-buttons {
+  justify-self: center;
+  align-self: end;
 }
 
 .board {
   display: grid;
   grid-template: repeat(3, 1fr) / repeat(3, 1fr);
-  height: 100%;
+  flex: auto;
 }
 
 .board button {
-  font-size: 10rem;
+  font-size: 8rem;
+}
+
+.winner {
+  color: green;
+  font-weight: 600;
 }
